resolved spacing issue

--- a/app/assets/stylesheets/pages/_roasts.scss
+++ b/app/assets/stylesheets/pages/_roasts.scss
@@ -285,7 +285,6 @@ $range-handle-size-big: 67px;
         .brand__text-wrapper {
           color: white;
           height: 200px;
-          margin-bottom: 40%;
           margin-top: -60%;
           padding-bottom: 6px;
           position: relative;
